# przydzielaczka

./: CMakeLists.txt  README.md  vcpkg.json
shared/schemas/: input.schema.json  output.schema.json
solver/: CMakeLists.txt
solver/bindings/: CMakeLists.txt
solver/bindings/cpp/: CMakeLists.txt  main.cpp
solver/bindings/python/: CMakeLists.txt
solver/bindings/wasm/: CMakeLists.txt
solver/core/: CMakeLists.txt  TODO.md
solver/core/include/: config.h  constraint_variant_fwd.h  constraints.h  data_mapper.h  data_models.h  input_data_mapper.h  input_data_models.h  input_data_parser.h  sequence_context.h  solution_set.h  solver.h  solver_config.h  solver_data_models.h  solver_runner.h  time_table_problem.h  time_table_state.h
solver/core/src/: constraints.cpp  data_mapper.cpp  input_data_mapper.cpp  input_data_parser.cpp  sequence_context.cpp  solver.cpp  solver_runner.cpp  time_table_problem.cpp  time_table_state.cpp
solver/solvers/: TODO.md  branch_and_bound_solver.h  class_group_range.h  constraint_evaluator.cpp  constraint_evaluator.h  i_solver.h  optimized_full_solver.h  simple_full_solver.h  simple_solver.cpp  simple_solver.h  solver_base.h  solver_config.h  stats.cpp  stats.h  traits.h
solver/solvers/policies/: bitset_time_policy.h  int_absence_policy.h  int_time_policy.h  null_policy.h  policies.h
solver/utils/: tuple_hash.h  tuple_string_hash.h
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt  helpers.h  test_constraints.cpp  test_solver.cpp  test_time_table_problem.cpp  test_time_table_state.cpp
tests/data/: classes.json  classes_2526_L_ISI.json  classes_2526_L_ISI_EIT.json  classes_2526_L_ISI_complex_test.json  classes_2526_test.json  new_classes_eit_corrected.json  sample_input.json  sample_output.json
